fixed spacing issue for mobiles

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -4,7 +4,9 @@
 .lobby-wrapper {
   display: flex;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
+  overflow-x: hidden; 
+  box-sizing: border-box;
 }
 
 .hero-section {
@@ -88,6 +90,7 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
+  box-sizing: border-box;
 
   @include tablet {
     width: 100%;
